# atom

./: .TEST_FIX_SUMMARY.md  .charm  .continue-here.md  .coverage_episodic.json  .dockerignore  .env.credentials.template  .env.development.template  .env.example  .env.integrations  .env.oauth.template  .env.personal  .env.production.example  .env.production.template  .env.test  .env.unified.template  .flake8  .gitignore  .gitmodules  .isort.cfg  .mcp.json.example  .percy.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.json  0001-fix-outcome-prefilter-data-model-prefilter-smoke-tes.patch  182_SERVICES_ACHIEVEMENT.md  ACTIVATE_ALL_SERVICES.py  ADD_MISSING_ENDPOINTS.md  ADVANCED_FEATURES_IMPLEMENTATION_SUMMARY.md  ADVANCED_REALTIME_FEATURES.md  AGENT_REPOSITORY_CREATION.md  API_KEY_INTEGRATION_GUIDE.md  APP_COMPLETION_UI_SERVICES.md  ASANA_IMPLEMENTATION_COMPLETE.md  ASANA_INTEGRATION_STATUS.md  ASANA_OAUTH_SETUP_GUIDE.md  ASANA_OAUTH_TEST_RESULTS.md  ATOM_ARCHITECTURE_SPEC_NEW.md  ATOM_ENHANCEMENT_PLAN.md  AUTONOMOUS_CELERY_INTEGRATION.md  (+638 more)
backend/: .coverage-rc  .coveragerc  .dockerignore  .env.backup.1765307273  .env.example  .env.oauth.template  .env.template  .gitignore  .pre-commit-config.yaml  .secrets.json  <arg_value>  ALL_PHASES_COMPLETE.md  ANALYTICS_DASHBOARD_TEST_RESULTS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COVERAGE_BASELINE.md  DEVELOPER_HANDOVER_REPORT.md  Dockerfile  Dockerfile.api  Dockerfile.worker  E2E_INTEGRATION_VALIDATION_REPORT_20251117_080234.json  E2E_INTEGRATION_VALIDATION_REPORT_20251117_080234.md  E2E_INTEGRATION_VALIDATION_REPORT_20251117_083611.json  E2E_INTEGRATION_VALIDATION_REPORT_20251117_083611.md  E2E_INTEGRATION_VALIDATION_REPORT_20251117_084158.json  E2E_INTEGRATION_VALIDATION_REPORT_20251117_084158.md  E2E_INTEGRATION_VALIDATION_REPORT_20251117_084948.json  E2E_INTEGRATION_VALIDATION_REPORT_20251117_084948.md  E2E_INTEGRATION_VALIDATION_REPORT_20251117_085141.json  E2E_INTEGRATION_VALIDATION_REPORT_20251117_085141.md  E2E_INTEGRATION_VALIDATION_REPORT_20251117_104931.json  E2E_INTEGRATION_VALIDATION_REPORT_20251117_104931.md  E2E_INTEGRATION_VALIDATION_REPORT_20251118_074948.json  E2E_INTEGRATION_VALIDATION_REPORT_20251118_074948.md  ERROR_HANDLING_PATTERNS.md  FINAL_98_TRUTH_VALIDATION_FRAMEWORK_REPORT.md  FINAL_IMPLEMENTATION_COMPLETE.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_REPORT_FEB_2026.md  FINAL_VERIFICATION.md  (+583 more)
backend/.github/: CODEOWNERS_QUALITY.md
backend/.planning/: MILESTONE-09-SUMMARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
backend/accounting/: ap_service.py  assistant.py  categorizer.py  close_agent.py  credit_risk_engine.py  dashboard_service.py  document_processor.py  export_service.py  fpa_service.py  ingestion.py  ledger.py  margin_service.py  models.py  multi_entity.py  reconciliation.py  revenue_recognition.py  routes.py  seeds.py  sync_manager.py  tax_service.py  test_advanced_finance.py  test_ap_automation.py  test_multiledger.py  test_refinement.py  workflow_service.py  workflows.py
backend/ai/: automation_engine.py  data_intelligence.py  device_node_service.py  etl_mapper.py  intelligence_background_worker.py  lux_marketplace.py  lux_model.py  lux_routes.py  nlp_engine.py  test_automation_engine.py  test_data_intelligence.py  test_nlp_engine.py  voice_service.py  workflow_nlu_editor.py  workflow_scheduler.py
backend/alembic/: env.py
backend/analytics/: collector.py  fleet_analytics_service.py  fleet_optimization_service.py  instrumentation.py  models.py  optimizer.py  plugin.py  routes.py
backend/analytics_data/: workflow_metrics.json
backend/api/: ab_testing.py  admin_routes.py  agent_control_routes.py  agent_coordination_routes.py  agent_governance_routes.py  agent_guidance_routes.py  agent_routes.py  agent_status_endpoints.py  ai_accounting_routes.py  ai_workflows_routes.py  analytics_dashboard_endpoints.py  analytics_dashboard_routes.py  apar_routes.py  artifact_routes.py  auth_2fa_routes.py  auth_routes.py  auto_install_routes.py  autonomous_coding_routes.py  background_agent_routes.py  billing_routes.py  board_comment_routes.py  board_decompose_routes.py  board_routes.py  browser_routes.py  byok_routes.py  canvas_coding_routes.py  canvas_collaboration.py  canvas_docs_routes.py  canvas_email_routes.py  canvas_orchestration_routes.py  canvas_recording_routes.py  canvas_routes.py  canvas_sheets_routes.py  canvas_skill_routes.py  canvas_state_routes.py  canvas_terminal_routes.py  canvas_type_routes.py  channel_routes.py  cognitive_tier_routes.py  communication_webhooks.py  (+118 more)
backend/apps/: __init__.py
backend/archive/: placeholder_report.json
backend/atom_security/: __main__.py
backend/audio-utils/: _linux_audio_utils.py  test__linux_audio_utils.py
backend/browser_engine/: agent.py  driver.py
backend/cli/: __init__.py  autonomous_coding_cli.py  daemon.py  enable.py  init.py  local_agent.py  main.py
backend/core/: __init__.py  ab_testing_service.py  accounting_validator.py  active_intervention_service.py  activity_publisher.py  admin_bootstrap.py  admin_endpoints.py  advanced_workflow_endpoints.py  advanced_workflow_system.py  agent_communication.py  agent_context_resolver.py  agent_coordination.py  agent_evolution_loop.py  agent_execution_service.py  agent_fleet_service.py  agent_governance_service.py  agent_graduation_service.py  agent_graphrag_service.py  agent_integration_gateway.py  agent_learning_enhanced.py  agent_marketplace_service.py  agent_orchestrator.py  agent_promotion_service.py  agent_request_manager.py  agent_social_layer.py  agent_task_registry.py  agent_utils.py  agent_worker_wrapper.py  agent_world_model.py  ai_accounting_engine.py  ai_service.py  ai_trigger_coordinator.py  ai_workflow_optimization_endpoints.py  ai_workflow_optimizer.py  alert_service.py  analytics_endpoints.py  analytics_engine.py  analytics_service.py  apar_engine.py  api_governance.py  (+485 more)
backend/demo_apps/: gmail.html  slack.html  zoho.html  (+1 more)
src-tauri/: Cargo.toml  Cargo_asana_complete.toml  Cargo_clean.toml  Cargo_fixed.toml  Cargo_with_chat.toml  tauri.conf.json
(+13546 files in other folders)
