[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atom-os"
version = "0.1.0"
description = "AI-powered business automation platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Atom Platform", email = "contact@atom-platform.dev"},
]
keywords = ["automation", "ai", "agents", "governance", "llm", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (Personal Edition)
dependencies = [
    # Core framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",

    # Database (SQLite for Personal)
    "sqlalchemy>=2.0.0",
    "alembic>=1.8.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Configuration
    "python-dotenv>=1.0.0",

    # LLM providers
    "openai>=1.0.0",
    "anthropic>=0.18.0",

    # Websockets
    "websockets>=11.0",

    # HTTP client
    "httpx>=0.24.0",

    # CLI
    "click>=8.0.0",

    # Vector embeddings (local)
    "fastembed>=0.2.0",

    # Logging
    "structlog>=23.1.0",
]

# Optional dependencies for Enterprise Edition
[project.optional-dependencies]
# Full enterprise features
enterprise = [
    # PostgreSQL driver
    "psycopg2-binary>=2.9.0",

    # Redis for pub/sub (multi-user)
    "redis>=4.5.0",

    # Monitoring
    "prometheus-client>=0.17.0",

    # SSO providers
    "authlib>=1.2.0",
    "pyokta>=1.0.0",

    # Advanced analytics
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Additional integrations
    "boto3>=1.28.0",  # AWS
    "google-cloud-storage>=2.5.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "faker>=19.0.0",
]

# All dependencies (dev + enterprise)
all = [
    "atom-os[enterprise,dev,test]",
]

[project.urls]
Homepage = "https://github.com/rush86999/atom"
Documentation = "https://github.com/rush86999/atom/tree/main/docs"
Repository = "https://github.com/rush86999/atom"
"Bug Tracker" = "https://github.com/rush86999/atom/issues"

[project.scripts]
atom-os = "cli.main:main_cli"

[tool.setuptools]
zip_safe = false

# Package discovery
[tool.setuptools.packages.find]
exclude = ["tests.*", "tests", "*.tests", "*.tests.*"]

# Include data files
[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]
