[package]
name = "atom"
version = "1.1.0"
description = "ATOM Desktop Agent - Health & Development Integration Platform with Chat Interface"
authors = ["ATOM Platform Team"]
license = "MIT"
repository = "https://github.com/atom-platform/desktop-agent"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "http-request", "notification-all", "path-all", "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Integration dependencies
oauth2 = "4.4"
base64 = "0.21"
url = "2.4"

# HTTP and networking
http = "0.2"
hyper = { version = "0.14", features = ["full"] }

# Serialization
serde_derive = "1.0"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "atom"
path = "src/main.rs"

[dev-dependencies]
tauri-build = { version = "1.4", features = [] }
