[package]
name = "atom"
version = "0.1.0"
description = "A Tauri App"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.1", features = [ "fs-all", "window-all", "dialog-all", "shell-execute", "shell-open", "http-all", "path-all", "notification-all"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
open = "4.0"
aes-gcm = "0.10.0"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
url = "2.3"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "atom"
path = "src/main.rs"
