[package]
name = "atomic-app"
version = "0.1.0"
description = "Atomic App Desktop Application"
authors = ["Atomic App Team"]
license = "MIT"
repository = "https://github.com/atomic/app"
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
